Columnify landing page. Scale Roboto up by 10%. Make headers in maths/ bigger. Fix headers in maths/' spacing

--- a/assets/image-header.css
+++ b/assets/image-header.css
@@ -1,6 +1,10 @@
+.has-header {
+	min-height: 10em;
+}
+
 .header {
-	width: 5em;
-	height: 5em;
+	width: 10em;
+	height: 10em;
 	vertical-align: text-bottom;
 	float: left;
 	margin-right: .25em;
